--- a/src/app/sections/header/header.component.html
+++ b/src/app/sections/header/header.component.html
@@ -26,7 +26,7 @@
 				</li>
 			</ul>
 			<div class="navbar-actions">
-				<a class="btn btn__tertiary" [routerLink]="'accedi' | route" routerLinkActive="active">{{ 'header.signIn' | translate }}</a>
+				<a class="btn btn--tertiary" [routerLink]="'accedi' | route" routerLinkActive="active">{{ 'header.signIn' | translate }}</a>
 			</div>
 		</div>
 		<div class="mobile-navbar">
