--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -153,14 +153,14 @@ sup {
 }
 
 a {
-	color: $secondary-color;
+	color: $tertiary-color;
 	text-decoration: none;
 	background-color: transparent;
 	-webkit-text-decoration-skip: objects;
 }
 
 a:hover {
-	color: $secondary-color;
+	color: $tertiary-color;
 	text-decoration: underline;
 }
 
