--- a/src/app/pages/auth/sign-in/sign-in.component.html
+++ b/src/app/pages/auth/sign-in/sign-in.component.html
@@ -1,62 +1,72 @@
-<div class="container">
-	<h3>{{ 'signIn.title' | translate }}</h3>
+<div class="page">
+	<div class="small-container">
 
-	<div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="facebook">
-		<img [src]="facebook.picture.data.url" class="rounded-circle" /> <strong>Logged in with Facebook as {{facebook.name}}</strong>
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="onFacebookLogout()">
-		  <span aria-hidden="true">&times;</span>
-		</button>
-	</div>
+		<h2>{{ 'signIn.title' | translate }}</h2>
 
-	<div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="google">
-		<img [src]="google.picture" class="rounded-circle" /> <strong>Logged in with Google as {{google.name}}</strong>
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="onGoogleLogout()">
-		  <span aria-hidden="true">&times;</span>
-		</button>
-	</div>
+		<div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="facebook">
+			<img [src]="facebook.picture.data.url" class="rounded-circle" /> <strong>Logged in with Facebook as {{facebook.name}}</strong>
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="onFacebookLogout()">
+			  <span aria-hidden="true">&times;</span>
+			</button>
+		</div>
 
-	<form name="signIn" role="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()" #signIn="ngForm">
-		<div class="form-group">
-			<label for="email">{{ 'signIn.email' | translate }}</label>
-			<input type="email" class="form-control" required [(ngModel)]="model.email" name="email" placeholder="{{ 'signIn.email' | translate }}" #email="ngModel" #input>
-			<div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
-				<div *ngIf="email.errors.required">{{ 'errors.required' | translate }}</div>
+		<div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="google">
+			<img [src]="google.picture" class="rounded-circle" /> <strong>Logged in with Google as {{google.name}}</strong>
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="onGoogleLogout()">
+			  <span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+
+		<form class="form" name="signIn" role="form" novalidate autocomplete="off" (ngSubmit)="onSubmit()" #signIn="ngForm">
+			<div class="form-group">
+				<label for="email">{{ 'signIn.email' | translate }}</label>
+				<input type="email" class="form-control" required [(ngModel)]="model.email" name="email" placeholder="{{ 'signIn.email' | translate }}" #email="ngModel" #input>
+				<div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
+					<div *ngIf="email.errors.required">{{ 'errors.required' | translate }}</div>
+				</div>
 			</div>
-			<b>### Utilizzare le classi di stato degli input -> [{{input.className}}]###</b><br>
-		</div>
-		<div class="form-group">
-			<label for="password">{{ 'signIn.password' | translate }}</label>
-			<input [type]="passwordReveal.value ? 'text' : 'password'" class="form-control" required [(ngModel)]="model.password" name="password" placeholder="{{ 'signIn.password' | translate }}" #password="ngModel">
-			<div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
-				<div *ngIf="password.errors.required">{{ 'errors.required' | translate }}</div>
+			<div class="form-group">
+				<label for="password">{{ 'signIn.password' | translate }}</label>
+				<input [type]="passwordReveal.value ? 'text' : 'password'" class="form-control" required [(ngModel)]="model.password" name="password" placeholder="{{ 'signIn.password' | translate }}" #password="ngModel">
+				<div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+					<div *ngIf="password.errors.required">{{ 'errors.required' | translate }}</div>
+				</div>
 			</div>
-		</div>
-		<div class="form-check">
-			<input type="checkbox" class="form-check-input" [(ngModel)]="model.passwordReveal" name="passwordReveal" #passwordReveal="ngModel">
-			<label class="form-check-label" for="passwordReveal">{{ 'signIn.passwordReveal' | translate }}</label>
-		</div>
-		<div class="form-check">
-			<input type="checkbox" class="form-check-input" [(ngModel)]="model.rememberMe" name="rememberMe" #rememberMe="ngModel">
-			<label class="form-check-label" for="rememberMe">{{ 'signIn.rememberMe' | translate }}</label>
-		</div>
-		<button type="submit" class="btn btn-primary" [disabled]="submitted || !signIn.form.valid">{{ 'signIn.register' | translate }}</button>
-	</form>
+			<div class="form-group">
+				<div class="checkbox">
+					<label>
+						<input type="checkbox" class="form-check-input" [(ngModel)]="model.passwordReveal" name="passwordReveal" #passwordReveal="ngModel">
+						<span>{{ 'signIn.passwordReveal' | translate }}</span>
+					</label>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="checkbox">
+					<label>
+						<input type="checkbox" class="form-check-input" [(ngModel)]="model.rememberMe" name="rememberMe" #rememberMe="ngModel">
+						<span>{{ 'signIn.rememberMe' | translate }}</span>
+					</label>
+				</div>
+			</div>
+			<button type="submit" class="btn btn-primary" [disabled]="submitted || !signIn.form.valid">{{ 'signIn.register' | translate }}</button>
+			<button type="button" class="btn-text" [routerLink]="'recupera-password' | route"><span>{{ 'signIn.passwordForgotten' | translate }}</span></button>
+		</form>
 
-	<div class="alert alert-danger fade show" role="alert" *ngIf="error">
-		<strong>{{error.statusText}}</strong>
-	</div>
-
-	<br>
-	<button type="button" class="btn btn-primary" [routerLink]="'recupera-password' | route"><span>{{ 'signIn.passwordForgotten' | translate }}</span></button>
-
-	<h3>Form dinamica</h3>
-	<!-- REACTIVE FORM -->
-	<form role="form" novalidate autocomplete="off" (ngSubmit)="onSubmit2()" [formGroup]="group">
-		<div *ngFor="let control of controls" class="form-row">
-			<app-control [control]="control" [form]="group"></app-control>
+		<div class="alert alert-danger fade show" role="alert" *ngIf="error">
+			<strong>{{error.statusText}}</strong>
 		</div>
+
+
+		<!-- <h3>Form dinamica</h3> -->
+		<!-- REACTIVE FORM -->
+		<!-- <form class="form" role="form" novalidate autocomplete="off" (ngSubmit)="onSubmit2()" [formGroup]="group"> -->
+		<!-- <div *ngFor="let control of controls"> -->
+		<!-- <app-control [control]="control" [form]="group"></app-control> -->
+		<!-- </div> -->
 		<!-- <control-editable formControlName="email"></control-editable> -->
-		<button type="submit" class="btn btn-primary" [disabled]="submitted || !group.valid">{{ 'signIn.register' | translate }}</button>
-	</form>
+		<!-- <button type="submit" class="btn btn-primary" [disabled]="submitted || !group.valid">{{ 'signIn.register' | translate }}</button> -->
+		<!-- </form> -->
+
+	</div>
 
 </div>
