--- a/src/app/pages/auth/sign-in/sign-in.component.scss
+++ b/src/app/pages/auth/sign-in/sign-in.component.scss
@@ -1,8 +1,22 @@
-.container {
-	max-width: 560px;
-	margin: 60px auto;
+@import "~scss/variables";
+
+/*--------------------------------------------------
+Sign
+--------------------------------------------------*/
+
+.btn {
+	min-width: 150px;
 }
 
-.rounded-circle {
-	margin-right: 10px;
+.btn-text {
+	display: block;
+	width: auto;
+	background: none;
+	border: 0;
+	padding: 0;
+	font-size: 12px;
+	color: $tertiary-color;
+	margin: 20px 0;
+	cursor: pointer;
+	text-decoration: underline;
 }
