--- a/src/app/pages/auth/sign/sign.component.scss
+++ b/src/app/pages/auth/sign/sign.component.scss
@@ -1,13 +1,63 @@
-.container {
-	margin: 60px auto;
-}
+@import "~scss/variables";
 
-.btn-facebook {
-	background: #3b5999;
-	color: white;
-}
+/*--------------------------------------------------
+Sign
+--------------------------------------------------*/
 
-.btn-google {
-	background: #dd4b39;
-	color: white;
+.sign-page {
+	button {
+		text-transform: none;
+		display: block;
+		width: 100%;
+		max-width: 320px;
+		margin-bottom: 20px;
+
+		svg {
+			position: relative;
+			margin-right: 10px;
+			top: 1px;
+			float: left;
+			width: 18px;
+			height: 18px;
+			fill: #fff;
+		}
+	}
+
+	.btn-facebook {
+		background: #5e77aa;
+		color: white;
+	}
+
+	.btn-google {
+		background: #ea4335;
+		color: white;
+	}
+
+	.top-border {
+		margin-top: 20px;
+		padding-top: 20px;
+		border-top: 1px solid $border-color;
+		display: inline-block;
+	}
+
+	.flag-list {
+		margin: 20px 0;
+		padding: 0;
+		list-style: none;
+
+		li {
+			padding: 0 0 5px 22px;
+			position: relative;
+			z-index: 1;
+
+			svg {
+				position: absolute;
+				top: 4px;
+				left: 0;
+				width: 16px;
+				height: 16px;
+				fill: $tertiary-color;
+			}
+		}
+	}
 }
