--- a/src/app/pages/search/search.component.scss
+++ b/src/app/pages/search/search.component.scss
@@ -88,7 +88,7 @@ Serp Filters
 		display: flex;
 		justify-content: space-between;
 
-		&--item {
+		.item {
 			flex: 0 0 25%;
 			display: flex;
 			flex-direction: column;
@@ -121,101 +121,103 @@ Serp Filters
 			}
 		}
 	}
-}
 
-.serp-filters--popup {
-	display: none;
+	&--popup {
+		display: none;
 
-	@include sm-down {
-		position: fixed;
-		z-index: 100;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100vh;
-		background-image: linear-gradient(to bottom, $tertiary-color, lighten($tertiary-color, 8%)) !important;
-
-		&.active {
-			display: flex;
-			flex-direction: column;
-		}
-
-		.head {
+		@include sm-down {
 			position: fixed;
 			z-index: 100;
 			top: 0;
 			left: 0;
 			width: 100%;
-			flex: 0 0 auto;
-			padding: 15px;
-			color: #fff;
-			font-size: 18px;
-		}
+			height: 100vh;
+			background-image: linear-gradient(to bottom, $tertiary-color, lighten($tertiary-color, 8%)) !important;
 
-		.close {
-			position: absolute;
-			z-index: 100;
-			top: 18px;
-			right: 15px;
-			cursor: pointer;
-			opacity: .5;
-
-			&:hover {
-				opacity: 1;
+			&.active {
+				display: flex;
+				flex-direction: column;
 			}
 
-			svg {
-				fill: #fff;
-				width: 20px;
-				height: 20px;
+			.head {
+				position: fixed;
+				z-index: 100;
+				top: 0;
+				left: 0;
+				width: 100%;
+				flex: 0 0 auto;
+				padding: 15px;
+				color: #fff;
+				font-size: 18px;
+			}
+
+			.close {
+				position: absolute;
+				z-index: 100;
+				top: 18px;
+				right: 15px;
+				cursor: pointer;
+				opacity: .5;
+
+				&:hover {
+					opacity: 1;
+				}
+
+				svg {
+					fill: #fff;
+					width: 20px;
+					height: 20px;
+				}
+			}
+
+			.content {
+				position: fixed;
+				z-index: 100;
+				top: 57px;
+				bottom: 59px;
+				left: 0;
+				width: 100%;
+				z-index: 100;
+				background: #fff;
+				overflow-y: auto;
+
+			}
+
+			main-search {
+				position: fixed;
+				z-index: 100;
+				top: 57px;
+				bottom: 0;
+				left: 0;
+				width: 100%;
+				z-index: 100;
+				overflow-y: auto;
+			}
+
+			.foot {
+				border-top: 1px solid $border-color;
+				background: #fff;
+				padding: 10px 15px;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				position: fixed;
+				z-index: 100;
+				left: 0;
+				bottom: 0;
+				width: 100%;
+
+
+				a.btn-reset {
+					color: $text-color;
+				}
 			}
 		}
 
-		.content {
-			position: fixed;
-			z-index: 100;
-			top: 57px;
-			bottom: 59px;
-			left: 0;
-			width: 100%;
-			z-index: 100;
-			background: #fff;
-			overflow-y: auto;
-
-		}
-
-		main-search {
-			position: fixed;
-			z-index: 100;
-			top: 57px;
-			bottom: 0;
-			left: 0;
-			width: 100%;
-			z-index: 100;
-			overflow-y: auto;
-		}
-
-		.foot {
-			border-top: 1px solid $border-color;
-			background: #fff;
-			padding: 10px 15px;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			position: fixed;
-			z-index: 100;
-			left: 0;
-			bottom: 0;
-			width: 100%;
-
-
-			a.btn-reset {
-				color: $text-color;
-			}
-		}
 	}
 
 }
+
 
 .serp-main-search--popup {
 	@include sm-up {
@@ -241,12 +243,12 @@ Serp Content
 }
 
 .serp-filter {
-	flex: 0 0 270px;
-	width: 270px;
+	flex: 0 0 310px;
+	width: 310px;
 	display: block;
 	padding: 0 30px 0 15px;
 
-	.serp-filter--sticky {
+	.sticky {
 		position: -webkit-sticky;
 		position: sticky;
 		top: 3px;
