--- a/src/app/sections/search-result-map/search-result-map.component.scss
+++ b/src/app/sections/search-result-map/search-result-map.component.scss
@@ -2,5 +2,13 @@
 
 .mapboxgl-map {
 	width: 100%;
-	height: 700px;
+	height: calc(100vh - 200px);
+
+	@include sm-down {
+		height: calc(100vh - 150px);
+	}
+
+	@include xs-down {
+		height: calc(100vh - 140px);
+	}
 }
