--- a/src/app/sections/search-result/search-result.component.html
+++ b/src/app/sections/search-result/search-result.component.html
@@ -1,4 +1,4 @@
-<div class="serp-results--head">
+<div class="head">
 	<ng-container [ngSwitch]="(search.resultsFiltered$ | async)?.length">
 		<ng-container *ngSwitchCase="null">
 			loading...
@@ -7,15 +7,15 @@
 			no results
 		</ng-container>
 		<ng-container *ngSwitchDefault>
-			<div class="serp-results--tit" *ngIf="search.model.destination">Ci sono <strong>{{(search.resultsFiltered$ | async)?.length}}</strong> offerte per <strong>{{search.model.destination?.name}}</strong></div>
-			<div class="serp-results--tit" *ngIf="!search.model.destination">Ci sono <strong>{{(search.resultsFiltered$ | async)?.length}}</strong> offerte per te</div>
+			<div class="tit" *ngIf="search.model.destination">Ci sono <strong>{{(search.resultsFiltered$ | async)?.length}}</strong> offerte per <strong>{{search.model.destination?.name}}</strong></div>
+			<div class="tit" *ngIf="!search.model.destination">Ci sono <strong>{{(search.resultsFiltered$ | async)?.length}}</strong> offerte per te</div>
 		</ng-container>
 	</ng-container>
-	<div class="serp-results--filter">
-		<div class="serp-results--filter-item">
-			<label for="serp-results--order">Ordina per</label>
+	<div class="filter">
+		<div class="filter-item">
+			<label for="order">Ordina per</label>
 			<div class="custom-select">
-				<select class="select" id="serp-results--order" [(ngModel)]="filterService.sorting" (change)="filterService.onSort()">
+				<select class="select" id="order" [(ngModel)]="filterService.sorting" (change)="filterService.onSort()">
 					<option selected *ngFor="let option of filterService.sortings" [ngValue]="option">{{option.name}}</option>
 				</select>
 			</div>
@@ -24,33 +24,33 @@
 </div>
 <div class="hotel-list">
 	<ng-container *ngFor="let item of (search.resultsFiltered$ | async); let i = index;">
-		<div class="hotel--item" *ngIf="i < search.visibleItems">
+		<div class="hotel-item" *ngIf="i < search.visibleItems">
 			<!-- Hotel Image -->
-			<div class="hotel--image">
+			<div class="image">
 				<div class="discount" *ngIf="item.overlayCoverImage">
 					<img alt="" [src]="item.overlayCoverImage | asset">
 				</div>
 				<a href="#" [routerLink]="item.slug | route">
-						<img alt="" class="hotel--image-thumb" [src]="item.photo | asset">
-					</a>
+					<img alt="" class="image-thumb" [src]="item.photo | asset">
+				</a>
 			</div>
 			<!-- /Hotel Image -->
 			<!-- Hotel Content -->
-			<div class="hotel--content">
-				<div class="hotel--head">
-					<div class="hotel--info">
-						<div class="hotel--name">
+			<div class="content">
+				<div class="head">
+					<div class="info">
+						<div class="name">
 							<a href="#" [routerLink]="item.slug | route">
 									<span>{{item.name}}</span> <span class="stars"><em *ngFor="let star of item?.rating?.split('');" [ngClass]="{ superior: star === 'S' }">{{star}}</em></span>
 								</a>
 						</div>
-						<div class="hotel--location">
-							<span class="hotel--region">{{item.destinationNation}} {{item.destinationRegion}}</span>&nbsp;<span class="hotel--town">{{item.destinationDescription}} {{item.destinationProvince}}</span>
+						<div class="location">
+							<span class="region">{{item.destinationNation}} {{item.destinationRegion}}</span>&nbsp;<span class="town">{{item.destinationDescription}} {{item.destinationProvince}}</span>
 						</div>
 					</div>
-					<div class="hotel--trust">
-						<span class="hotel--trust__number excellent">{{item.trustPilot_averageStars}}</span>
-						<span class="hotel--trust__text excellent">{{item.trustPilot_nReviews}}</span>
+					<div class="hotel-trust">
+						<span class="number excellent">8.7<!-- {{item.trustPilot_averageStars}} --></span>
+						<span class="text excellent">Eccellente<!-- {{item.trustPilot_nReviews}} --></span>
 					</div>
 					<button type="button" class="add-to-fav">
 						<svg class="ico">
@@ -58,40 +58,40 @@
 						</svg>
 					</button>
 				</div>
-				<div class="hotel--desc">
-					<ul class="hotel--list">
-						<li class="hotel--list-item">
+				<div class="desc">
+					<ul class="list">
+						<li class="list-item">
 							<svg class="ico">
 								<use xlink:href="#ico-calendar"></use>
 							</svg>
 							<span>{{item.abstract}}</span>
 						</li>
-						<li class="hotel--list-item">
+						<li class="list-item">
 							<svg class="ico">
 								<use xlink:href="#ico-struttura"></use>
 							</svg>
 							<span>{{item.accomodation}}</span>
 						</li>
-						<li class="hotel--list-item">
+						<li class="list-item">
 							<svg class="ico">
 								<use xlink:href="#ico-fav"></use>
 							</svg>
 							<span>utilizzo centro benessere</span>
 						</li>
-						<li class="hotel--list-item">
+						<li class="list-item">
 							<svg class="ico">
 								<use xlink:href="#ico-fav"></use>
 							</svg>
 							<span>utilizzo wi-fi</span>
 						</li>
-						<li class="hotel--list-item">
+						<li class="list-item">
 							<svg class="ico">
 								<use xlink:href="#ico-fav"></use>
 							</svg>
 							<span>utilizzo centro sportivo</span>
 						</li>
 					</ul>
-					<div class="hotel--special-msg">
+					<div class="special-msg">
 						<!-- <strong>20%</strong> PRENOTA PRIMA -->
 						{{item.earlyBookingText}}
 					</div>
@@ -99,7 +99,7 @@
 			</div>
 			<!-- /Hotel Content -->
 			<!-- Hotel Action -->
-			<div class="hotel--action">
+			<div class="action">
 				<button type="button" class="add-to-fav">
 					<svg class="ico">
 						<use xlink:href="#ico-fav"></use>
@@ -107,12 +107,12 @@
 					Preferiti
 				</button>
 				<!--
-				<div class="hotel--special-msg">
+				<div class="special-msg">
 					<strong>20%</strong> PRENOTA PRIMA {{item.earlyBookingText}}
 				</div>
 				-->
-				<div class="hotel--summary">
-					<div class="hotel--price">
+				<div class="summary">
+					<div class="price">
 						<span class="desc">Da</span>
 						<span class="single-price">
 								<span class="value">{{item.price}}</span>
@@ -120,7 +120,7 @@
 						</span>
 						<span class="desc">Prezzo per persona</span>
 					</div>
-					<div class="hotel--total-price">
+					<div class="total-price">
 						<span class="desc">Prezzo totale</span>
 						<span class="total-price">
 								<span class="value">{{item.totalPrice}}</span>
@@ -128,7 +128,7 @@
 						</span>
 					</div>
 				</div>
-				<div class="hotel--cta">
+				<div class="cta">
 					<a class="btn" href="#" [routerLink]="item.slug | route">Continua</a>
 				</div>
 			</div>
