--- a/src/app/sections/svg/svg.component.html
+++ b/src/app/sections/svg/svg.component.html
@@ -135,6 +135,12 @@
 		<path d="M29.1,14H9.9c-0.2,0-0.4,0.1-0.5,0.2c-0.1,0.1-0.2,0.3-0.2,0.5v2.7c0,0.2,0.1,0.4,0.2,0.5C9.5,18,9.7,18,9.9,18h19.2
 			c0.2,0,0.4-0.1,0.5-0.2c0.1-0.1,0.2-0.3,0.2-0.5v-2.7c0-0.2-0.1-0.3-0.2-0.5C29.5,14,29.3,14,29.1,14z" />
 	</symbol>
+	<symbol id="ico-mail" viewBox="0 0 32 32">
+		<path d="M28.5,13.4c-3.4,2.3-6,4.1-7.8,5.4c-0.6,0.4-1.1,0.8-1.5,1c-0.4,0.2-0.9,0.5-1.5,0.8 C17.1,20.9,16.5,21,16,21h0h0c-0.5,0-1.1-0.1-1.7-0.4c-0.6-0.3-1.1-0.5-1.5-0.8c-0.4-0.2-0.9-0.6-1.5-1c-1.4-1-4-2.9-7.8-5.4 c-0.6-0.4-1.1-0.9-1.6-1.4v12.5c0,0.7,0.2,1.3,0.7,1.8c0.5,0.5,1.1,0.7,1.8,0.7h23.1c0.7,0,1.3-0.2,1.8-0.7 c0.5-0.5,0.7-1.1,0.7-1.8V12.1C29.6,12.6,29.1,13,28.5,13.4L28.5,13.4z M29.3,5.6c-0.5-0.5-1.1-0.7-1.8-0.7H4.5 C3.6,4.9,3,5.2,2.6,5.7c-0.4,0.5-0.7,1.2-0.7,2c0,0.7,0.3,1.4,0.9,2.2c0.6,0.8,1.2,1.4,1.8,1.8C5,12,6.1,12.7,7.9,14 s3.2,2.2,4.1,2.9c0.1,0.1,0.3,0.2,0.7,0.5c0.3,0.2,0.6,0.4,0.8,0.6c0.2,0.2,0.5,0.3,0.8,0.5c0.3,0.2,0.6,0.3,0.9,0.4 C15.5,19,15.7,19,16,19h0h0c0.2,0,0.5,0,0.8-0.1c0.3-0.1,0.6-0.2,0.9-0.4c0.3-0.2,0.6-0.4,0.8-0.5c0.2-0.2,0.5-0.4,0.8-0.6 c0.3-0.2,0.6-0.4,0.7-0.5c1-0.7,3.4-2.4,7.3-5.1c0.8-0.5,1.4-1.2,1.9-1.9c0.5-0.8,0.8-1.6,0.8-2.4C30.1,6.7,29.8,6.1,29.3,5.6z" />
+	</symbol>
+	<symbol id="ico-check" viewBox="0 0 32 32">
+		<path d="M14.504,28.988 C6.505,28.988 0.020,22.504 0.020,14.505 C0.020,6.505 6.505,0.020 14.504,0.020 C22.502,0.020 28.988,6.505 28.988,14.505 C28.988,22.504 22.502,28.988 14.504,28.988 ZM22.432,9.654 C21.861,9.011 20.936,9.011 20.366,9.654 L12.219,17.324 L8.598,13.265 C8.025,12.622 7.096,12.622 6.523,13.265 C5.950,13.908 5.950,14.952 6.523,15.595 L10.916,20.521 C10.980,20.646 11.034,20.776 11.130,20.883 C11.435,21.227 11.841,21.373 12.242,21.347 C12.625,21.354 13.011,21.199 13.303,20.870 C13.391,20.773 13.438,20.653 13.499,20.540 L22.432,11.981 C23.001,11.337 23.001,10.295 22.432,9.654 Z" />
+	</symbol>
 </svg>
 <!-- /SVG Sprite -->
 
@@ -248,5 +254,15 @@
 		<svg class="ico">
 			<use xlink:href="#ico-list"></use>
 		</svg><span>#ico-list</span>
+	</div>
+	<div>
+		<svg class="ico">
+			<use xlink:href="#ico-mail"></use>
+		</svg><span>#ico-mail</span>
+	</div>
+	<div>
+		<svg class="ico">
+			<use xlink:href="#ico-check"></use>
+		</svg><span>#ico-check</span>
 	</div>
 </div>
