--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $tit-color: #062638;
 $tertiary-color: #1677c0;
 $light-color: #fafafa;
 $border-color: #e0e0e0;
+$alert-color: #c00;
 $star-color: #fcb851;
 $rate-excellent: #72b244;
 $rate-good: #fab424;
