--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,11 +2,14 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/input-group";
 @import "~bootstrap/scss/card";
 // eliminabili
+@import '~swiper/dist/css/swiper.min.css';
+@import '~@fancyapps/fancybox/dist/jquery.fancybox.css';
 @import "scss/variables";
 @import "scss/reset";
 @import "scss/base";
@@ -16,3 +19,5 @@
 @import "scss/calendar";
 @import "scss/accordion";
 @import "scss/serp";
+@import "scss/gallery";
+@import "scss/fancybox";
