--- a/src/app/pages/serp/serp-map.component.scss
+++ b/src/app/pages/serp/serp-map.component.scss
@@ -11,4 +11,13 @@
 	@include xs-down {
 		height: calc(100vh - 140px);
 	}
+
+	pointer-events: none;
+	opacity: 0;
+	transition: opacity ease-in-out 350ms;
+
+	&.active {
+		opacity: 1;
+		pointer-events: all;
+	}
 }
