--- a/src/app/pages/serp/serp-map.component.html
+++ b/src/app/pages/serp/serp-map.component.html
@@ -1,3 +1,6 @@
-<div>
+<div (clickOutside)="hotel = null">
 	<div #map [ngClass]="{ active: ready }"></div>
+	<ng-container *ngIf="hotel">
+		<serp-item [item]="hotel" [appear]="true"></serp-item>
+	</ng-container>
 </div>
