--- a/src/app/pages/serp/serp-map.component.scss
+++ b/src/app/pages/serp/serp-map.component.scss
@@ -20,4 +20,9 @@
 		opacity: 1;
 		pointer-events: all;
 	}
+
+	a.mapboxgl-ctrl-logo,
+	.mapboxgl-ctrl.mapboxgl-ctrl-attrib {
+		display: none;
+	}
 }
