--- a/src/app/pages/serp/serp.component.html
+++ b/src/app/pages/serp/serp.component.html
@@ -81,7 +81,7 @@
 </div>
 
 <div class="serp-content">
-	<div class="container">
+	<div class="container" lazy-images>
 		<div class="serp-filter">
 			<div class="switch-map-list">
 				<div class="switch-map-list--item switch-map-list--item__map" [ngClass]="{ active: viewType == viewTypes.List }">
