--- a/src/scss/_serp.scss
+++ b/src/scss/_serp.scss
@@ -1,3 +1,4 @@
+@import "~mapbox-gl/dist/mapbox-gl.css";
 @import "~scss/variables";
 
 /*--------------------------------------------------
@@ -113,7 +114,16 @@ hotel List
 				height: auto;
 				min-width: 100%;
 				min-height: 100%;
-				transition: transform .3s ease-in-out;
+				transition: .3s ease-in-out;
+				transition-property: transform, opacity;
+
+				&:not([src]) {
+					opacity: 0;
+				}
+
+				&[src] {
+					opacity: 1;
+				}
 
 				@include xs-down {
 					position: static;
