--- a/src/app/pages/hotel/hotel.component.html
+++ b/src/app/pages/hotel/hotel.component.html
@@ -1,3 +1,11 @@
+<!--
+<section>
+	<div class="container">
+		<main-search (doSearch)="filterService.onReset(); search.onSearchIn()">---</main-search>
+	</div>
+</section>
+-->
+
 <section class="hotel-page" *ngIf="hotel">
 	<div class="container">
 		<div class="hotel-sidebar">
