--- a/src/app/pages/serp/serp-list.component.html
+++ b/src/app/pages/serp/serp-list.component.html
@@ -25,7 +25,7 @@
 <div class="hotel-list">
 	<ng-container *ngFor="let item of (search.resultsFiltered$ | async); let i = index;">
 		<ng-container *ngIf="i < search.visibleItems">
-			<serp-item [item]="item"></serp-item>
+			<serp-item [item]="item" [state]="'appear'"></serp-item>
 		</ng-container>
 	</ng-container>
 	<button type="button" class="btn" *ngIf="(search.resultsFiltered$ | async)?.length > search.visibleItems" (click)="search.visibleItems = search.visibleItems + 20">carica altri</button>
