--- a/src/app/pages/serp/serp-map.component.scss
+++ b/src/app/pages/serp/serp-map.component.scss
@@ -1,5 +1,12 @@
 @import "~scss/variables";
 
+:host {
+	flex: 1 0 calc(100% - 310px);
+	width: calc(100% - 310px);
+	max-width: calc(100% - 310px);
+	padding-right: 15px;
+}
+
 .mapboxgl-map {
 	width: 100%;
 	height: calc(100vh - 200px);
