--- a/src/app/pages/serp/serp.component.scss
+++ b/src/app/pages/serp/serp.component.scss
@@ -233,11 +233,12 @@ Serp Content
 --------------------------------------------------*/
 
 .serp-content {
-	.container {
-		display: flex;
-		justify-content: space-between;
-		margin-bottom: 60px;
-
+	@include sm-up {
+		.container {
+			display: flex;
+			justify-content: space-between;
+			margin-bottom: 60px;
+		}
 	}
 }
 
