--- a/src/app/pages/serp/serp-filter.component.html
+++ b/src/app/pages/serp/serp-filter.component.html
@@ -4,7 +4,7 @@
 		<ng-container *ngIf="group.visible">
 			<ul class="list">
 				<ng-container *ngFor="let item of group.items; let i = index;">
-					<li class="list--item" *ngIf="item.visible">
+					<li class="list--item item-{{item.id}}" *ngIf="item.visible">
 						<div class="checkbox" [ngSwitch]="group.type">
 							<label *ngSwitchCase="groupTypes.Rating">
 								<input type="checkbox" [(ngModel)]="item.selected" (ngModelChange)="onToggle(item.id, group.type)">
